Check up for my hosting page

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-     <h1 class="text-red-500">hellow</h1>
+     <h1 class="text-red-500 font-bold text-7xl">hello this is the start</h1>
 </body>
 </html>
