--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./src/assets/favicon.ico" type="image/x-icon">
       <link href="./src/output.css" rel="stylesheet">
-    <title>Document</title>
+    <title>University</title>
 </head>
 <body>
-     <h1 class="text-red-500 font-bold text-7xl">hello this is the start</h1>
+    
 </body>
 </html>
