On going process\

--- a/index.html
+++ b/index.html
@@ -7,7 +7,22 @@
       <link href="./src/output.css" rel="stylesheet">
     <title>University</title>
 </head>
-<body>
+<body class="mx-auto">
+    
+   <nav>
+       <div class="relative w-full ">
+          <img  class=" relative w-full  object-cover " src="./src/assets/welcome-homepage-new.jpg.jpeg" alt="">
+           <div class="absolute inset-0">
+                <img class=" brightness-0 invert-100 " src="src/assets/7c1114f4-cf0c-4c20-a68e-0b3b959ed212.svg" alt="">    
+           </div>
+       </div>
+   </nav>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
     
 </body>
 </html>
