--- a/index.html
+++ b/index.html
@@ -69,6 +69,25 @@
      </div>
    </div>
 
+    <p class=" text-5xl font-bold ml-10 mt-20"> Discover the University of Liverpool</p>
+     <div  class=" flex justify-center items-center" >
+           <img class=" w-200 -h-200 p-10" src="src/assets/contact-us-VGM.jpg.jpeg" alt="">
+            <div class=" block space-y-14">
+                <p class=" text-3xl">
+                  We are the University of Liverpool. Located at the heart of a thrilling world city, we are a dynamic institution of academic excellence and innovation, making a positive impact across the United Kingdom and the wider world.
+                </p>
+
+                <p class="text-2xl">
+                  Since 1881, we've been at the forefront of world-class research and education, known for our cutting-edge facilities and relentless pursuit of excellence and achievement. Find out how you can be part of our vibrant community and explore the work we’re doing with our famous home city.
+                </p>
+                 
+                <div class=" flex gap-10">
+                   <button class=" p-5 h-20 border-1  text-2xl "><p class="hover:border-b-2"> Learn about us</p></button>
+                   <button class=" p-5 h-20 border-1  text-2xl "><p class="hover:border-b-2"> Liverpool: Our city, our inspiration</p></button>
+                </div>
+            </div>
+     </div>
+
   </main>
 
      
