--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
        </div>
        <div>
          <div class=" mx-auto flex space-x-5">
-          <p class=" text-[20px] border p-3"> Undergraduate</p>
+          <p class=" text-[20px] border p-3"> Find out more</p>
 
          </div> 
        </div>
@@ -215,7 +215,72 @@
      </div>
 
 
-     <p>Our research: Transforming lives, changing the world</p>
+     <p class=" text-3xl  mx-auto opacity-80 font-bold ml-3 mt-20">Our research: Transforming lives, changing the world</p>
+
+
+       <div class=" w-310 mx-auto mt-5 opacity-80">
+          <p class=" text-[21px]">
+            Discover how our research is making a difference all over the world. As a founding member of the Russell Group, research is the driving force behind our success, tackling real-world challenges to have a positive impact on society and the world around us.
+          </p>
+       </div>
+
+
+
+<div class=" flex mt-30">
+
+       <div class=" border-t-1 w-70 mx-auto ">
+        <div class=" flex items-center space-x-20 mt-15">
+           <a class="border-b-1  text-[18px] font-bold text-blue-950" href="">Researach Frontiers</a>
+           <svg class=" w-5 h-10" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640"><path d="M98.9 114.6C91.5 130.6 98.5 149.7 114.5 157.1L467.6 320L114.6 483C98.6 490.4 91.5 509.4 99 525.5C106.5 541.6 125.4 548.5 141.5 541.1L557.5 349.1C568.8 343.9 576.1 332.5 576.1 320C576.1 307.5 568.8 296.2 557.5 290.9L141.4 99C125.4 91.6 106.3 98.6 98.9 114.6z"/></svg>
+        </div>  
+    <div class=" w-70">     
+     <p class=" opacity-90">
+        Read more about  our  research frontiers and how we're driving innovation in materials discovery, particles and physical therapeutics innovation  to build a  better futere.
+     </p>
+    </div> 
+
+       </div>
+
+
+
+
+       <div class=" border-t-1 w-100 mx-auto ">
+        <div class=" flex items-center space-x-10 mt-15">
+           <a class="border-b-1  text-[18px] font-bold text-blue-950" href="">Interdisciplinary Centre for Sustainability Research</a>
+           <svg class=" w-5 h-10" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640"><path d="M98.9 114.6C91.5 130.6 98.5 149.7 114.5 157.1L467.6 320L114.6 483C98.6 490.4 91.5 509.4 99 525.5C106.5 541.6 125.4 548.5 141.5 541.1L557.5 349.1C568.8 343.9 576.1 332.5 576.1 320C576.1 307.5 568.8 296.2 557.5 290.9L141.4 99C125.4 91.6 106.3 98.6 98.9 114.6z"/></svg>
+        </div>  
+    <div class=" w-70">     
+     <p class=" opacity-90">
+Explore our new Interdisciplinary Centre for Sustainability Research and find out how we're utilising a variety of skills and knowleddge to find new developments in sustainability research.     </p>
+    </div> 
+
+       </div>
+
+
+
+
+
+
+
+       <div class=" border-t-1 w-70 mx-auto ">
+        <div class=" flex items-center space-x-20 mt-15">
+           <a class="border-b-1  text-[18px] font-bold text-blue-950" href="">Our Impact</a>
+           <svg class=" w-5 h-10" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640"><path d="M98.9 114.6C91.5 130.6 98.5 149.7 114.5 157.1L467.6 320L114.6 483C98.6 490.4 91.5 509.4 99 525.5C106.5 541.6 125.4 548.5 141.5 541.1L557.5 349.1C568.8 343.9 576.1 332.5 576.1 320C576.1 307.5 568.8 296.2 557.5 290.9L141.4 99C125.4 91.6 106.3 98.6 98.9 114.6z"/></svg>
+        </div>  
+    <div class=" w-70">     
+     <p class=" opacity-90">
+
+91% of our research is ranked world leading or internationally excellent (REF 2021). Find out how our researchers are improving the world we live in every day.
+
+Explore our research     </p>
+    </div> 
+
+       </div>
+
+
+ </div>      
+
+    <div class="  w-50 ml-3 mt-30"><p class=" text-[18px] border p-1 ">Explore our Research</p></div>
 
 
 
