--- a/index.html
+++ b/index.html
@@ -300,6 +300,27 @@ Explore our research     </p>
 
 
 
+      <div class="flex mx-auto text-white bg-[#0a2247] w-310 mt-30">
+
+      <p class="absolute text-2xl font-bold ml-10 mt-20 ">Discover Liverpool in IndiaWe're making an impact across the globe</p>
+       
+      <div class=" mx-auto block justify-center items-center space-y-10">  
+       <div class="w-190 mt-[130px]">
+        <p class=" text-[18px]">We’re proud to be part of a global community, where collaboration drives our success and impact across the world. Find out more about our commitment to global engagement and how we’re making a difference to the world.</p>
+       </div>
+       <div>
+         <div class=" flex mx-auto  space-x-5">
+           <p class=" text-[20px] border p-3"> Explore our global partnerships</p>
+           <p class=" text-[20px] border p-3"> Work with us</p>
+           
+         </div> 
+       </div>
+     </div>  
+        <img class=" h-90 w-100 " src="src/assets/global-cropped,(1).jpg.jpeg" alt="">
+     </div>
+
+
+
 
 
   </main>
