last action on footer

--- a/index.html
+++ b/index.html
@@ -415,105 +415,90 @@ Exceptional Liverpool scientists honoured with Royal Society awards</p>
   </main>
 
 
-   <footer class=" mx-auto bg-[#212a30] pb-10 ">
-        <div class=" mx-auto  text-[25]  border-b-1 border-white">
+<footer class="mx-auto bg-[#212a30] pb-10 text-white">
+  <div class="max-w-7xl mx-auto border-b border-white pb-10">
+    <div class="flex flex-wrap justify-between gap-10">
+   
+      <img class="brightness-0 invert w-40 h-40" src="src/assets/3086e686-fd75-4e3f-b52e-44b05c22a715.svg" alt="Logo">
 
-   <div class=" flex  text-[20px] space-x-20 ">
+      <div>
+        <h3 class="font-bold mb-4">Information for</h3>
+        <ul class="space-y-2">
+          <li><a class="border-b border-white pb-1 inline-block" href="#">Current students</a></li>
+          <li><a class="border-b border-white pb-1 inline-block" href="#">Prospective students</a></li>
+          <li><a class="border-b border-white pb-1 inline-block" href="#">Businesses and Partners</a></li>
+          <li><a class="border-b border-white pb-1 inline-block" href="#">Researchers</a></li>
+          <li><a class="border-b border-white pb-1 inline-block" href="#">Media</a></li>
+        </ul>
+      </div>
 
-                 <img class=" brightness-0 invert-100 w-60 h-60" src="src/assets/3086e686-fd75-4e3f-b52e-44b05c22a715.svg" alt="">
-           
+      <div>
+        <h3 class="font-bold mb-4">Study at Liverpool</h3>
+        <ul class="space-y-2">
+          <li><a class="border-b border-white pb-1 inline-block" href="#">Undergraduate</a></li>
+          <li><a class="border-b border-white pb-1 inline-block" href="#">Postgraduate taught</a></li>
+          <li><a class="border-b border-white pb-1 inline-block" href="#">Postgraduate research</a></li>
+          <li><a class="border-b border-white pb-1 inline-block" href="#">Online courses</a></li>
+          <li><a class="border-b border-white pb-1 inline-block" href="#">CPD</a></li>
+          <li><a class="border-b border-white pb-1 inline-block" href="#">Continuing education</a></li>
+          <li><a class="border-b border-white pb-1 inline-block" href="#">International students</a></li>
+        </ul>
+      </div>
 
-              <div class="  text-white">
-                   <ul>
-                     <li> <a class=" font-bold pb-4" href="#">Information for</a></li>
-                     <li> <a href="#">Current students</a></li>
-                     <li> <a href="#">Prospective students</a></li>
-                     <li> <a href="#">IBusinesses and Partners</a></li>
-                     <li> <a href="#">Researchers</a></li>
-                     <li> <a href="#">Media</a></li>
-                   </ul>
-              </div>
+      <div>
+        <h3 class="font-bold mb-4">Quick links</h3>
+        <ul class="space-y-2">
+          <li><a class="border-b border-white pb-1 inline-block" href="#">Jobs at Liverpool</a></li>
+          <li><a class="border-b border-white pb-1 inline-block" href="#">Library</a></li>
+          <li><a class="border-b border-white pb-1 inline-block" href="#">Sport at Liverpool</a></li>
+          <li><a class="border-b border-white pb-1 inline-block" href="#">Our people</a></li>
+          <li><a class="border-b border-white pb-1 inline-block" href="#">Alumni</a></li>
+          <li><a class="border-b border-white pb-1 inline-block" href="#">Our departments and faculties</a></li>
+          <li><a class="border-b border-white pb-1 inline-block" href="#">All subjects</a></li>
+        </ul>
+      </div>
 
+      <div class="pr-10">
+        <h3 class="font-bold mb-4">Contact us</h3>
+        <ul class="space-y-4"> 
+          <li>University of Liverpool</li>
+          <li>Foundation Building</li>
+          <li>Brownlow Hill</li>
+          <li>Liverpool L69 7ZX</li>
+          <li>Telephone: +44 (0) 151 794 2000</li>
+          <li><a class="border-b border-white pb-1 inline-block" href="#">Maps and directions</a></li>
+          <li><a class="border-b border-white pb-1 inline-block" href="#">Visit us</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
 
+  <div class="max-w-7xl mx-auto flex flex-wrap justify-between items-center border-b border-white py-6 gap-10">
+    <div class="flex flex-col items-center">
+      <p class=" relative top-10 opacity-60 ">Part of the</p>
+      <img class="w-30 h-30 brightness-0 invert-50 ml-10" src="src/assets/23b7247e-aa88-4f27-8e4a-a66ffdaa2f15.svg" alt="Partner">
+    </div>
+    <div class="flex flex-wrap gap-5 justify-center">
+      <img class="w-10 h-10 brightness-0 invert" src="src/assets/951ee5bb-cac3-4f65-a1e5-feaa1ce7f7b7.svg" alt="">
+      <img class="w-10 h-10 brightness-0 invert" src="src/assets/a74f85a7-aad8-43d9-8fde-04de8f1d0983.svg" alt="">
+      <img class="w-10 h-10 brightness-0 invert" src="src/assets/5e5bc01e-931e-4c2e-9476-825351acf65b.svg" alt="">
+      <img class="w-10 h-10 brightness-0 invert" src="src/assets/fcecccfc-cdae-4a17-981c-5442a9fbfc67.svg" alt="">
+      <img class="w-10 h-10 brightness-0 invert" src="src/assets/a2b964d1-a541-4fd3-b03a-d087a9d95d72.svg" alt="">
+      <img class="w-10 h-10 brightness-0 invert" src="src/assets/2d4b0f3b-5af0-4a58-ae11-042c998db0bd.svg" alt="">
+      <img class="w-10 h-10 brightness-0 invert" src="src/assets/cc12b061-e2b5-4941-b521-06906f6b4145.svg" alt="">
+    </div>
+  </div>
 
-              <div class=" text-white">
-                   <ul>
-                     <li> <a href="#">Study at Liverpool</a></li>
-                     <li> <a href="#">Undergraduate</a></li>
-                     <li> <a href="#">Postgraduate taught</a></li>
-                     <li> <a href="#">Postgraduate research</a></li>
-                     <li> <a href="#">Online courses</a></li>
-                     <li> <a href="#">CPD</a></li>
-                      <li> <a href="#">Continuing education</a></li>
-                      <li> <a href="#">International students</a></li>
-                   </ul>
-              </div>
-
-
-              <div class=" text-white">
-                   <ul>
-                     <li> <a href="#">Quick links</a></li>
-                     <li> <a href="#">Jobs at Liverpool</a></li>
-                     <li> <a href="#">Library</a></li>
-                     <li> <a href="#">Sport at Liverpool</a></li>
-                     <li> <a href="#">Our people</a></li>
-                     <li> <a href="#">Alumni</a></li>
-                     <li> <a href="#">Our departments and faculties</a></li>
-                     <li> <a href="#">All subjects</a></li>
-                   </ul>
-              </div>
-
-
-              <div class=" text-white  justify-items-end pr-20">
-                   <ul>
-                     <li> <a href="#">Contact us</a></li>
-                     <li> <a href="#">University of Liverpool
-Foundation Building
-Brownlow Hill
-Liverpool
-L69 7ZX
-Telephone+44 (0) 151 794 2000</a></li>
-                     <li> <a href="#">Contact us</a></li>
-                     <li> <a href="#">Maps and directions</a></li>
-                     <li> <a href="#">Visit us</a></li>
-                    
-                   </ul>
-              </div>
-
-          </div>    
-        </div>
-
-
-
-        <div class=" flex mx-auto  justify-center space-x-170 items-center border-b-1 border-white">
-            <div>
-               <p class=" relative top-10 opacity-40 text-white">Part of the</p>
-               <img class=" w-30 h-30 brightness-0 invert-50" src="src/assets/23b7247e-aa88-4f27-8e4a-a66ffdaa2f15.svg" alt="">
-
-            </div>
-            <div class=" flex space-x-5">
-               <img class=" w-10 h-10 brightness-0 invert-100" src="src/assets/951ee5bb-cac3-4f65-a1e5-feaa1ce7f7b7.svg" alt="">
-               <img class=" w-10 h-10 brightness-0 invert-100" src="src/assets/a74f85a7-aad8-43d9-8fde-04de8f1d0983.svg" alt="">
-               <img class=" w-10 h-10 brightness-0 invert-100" src="src/assets/5e5bc01e-931e-4c2e-9476-825351acf65b.svg" alt="">
-               <img class=" w-10 h-10 brightness-0 invert-100" src="src/assets/fcecccfc-cdae-4a17-981c-5442a9fbfc67.svg" alt="">
-               <img class=" w-10 h-10 brightness-0 invert-100" src="src/assets/a2b964d1-a541-4fd3-b03a-d087a9d95d72.svg" alt="">
-               <img class=" w-10 h-10 brightness-0 invert-100" src="src/assets/2d4b0f3b-5af0-4a58-ae11-042c998db0bd.svg" alt="">
-               <img class=" w-10 h-10 brightness-0 invert-100" src="src/assets/cc12b061-e2b5-4941-b521-06906f6b4145.svg" alt="">
-            </div>
-        </div>
-
-
-        <div class=" flex mx-auto justify-center space-x-3 text-white text-[18px] mt-5">
-            <a href="">Accessibility</a>
-            <a href="">Freedom of information</a>
-            <a href="">Cookie information</a>
-            <a href="">Data Protection</a>
-            <a href="">Modern slavery statement</a>
-            <a href="">Terms and Conditions</a>
-            <a href="">Charitable status</a>
-        </div>
-        <p class=" text-white ml-15 text-[18px] mt-5 "> &copy; University of Liverpool</p>
-   </footer>
+<div class=" flex mx-auto justify-center space-x-5 text-white text-[18px] mt-5"> 
+ <a class=" border-b-1 border-white" href="">Accessibility</a> 
+ <a class=" border-b-1 border-white" href="">Freedom of information</a>
+ <a class=" border-b-1 border-white"href="">Cookie information</a> 
+ <a class=" border-b-1 border-white"href="">Data Protection</a>
+ <a class=" border-b-1 border-white"href="">Modern slavery statement</a> 
+ <a class=" border-b-1 border-white"href="">Terms and Conditions</a>
+ <a class=" border-b-1 border-white"href="">Charitable status</a> 
+</div> 
+<p class=" text-white ml-8 text-[20px] mt-5 "> &copy; University of Liverpool</p> </footer>
 
   
 </body>
