fix: Unresponsive design

--- a/index.html
+++ b/index.html
@@ -20,13 +20,39 @@
            alt="">
     </div>
 
-    <nav class="hidden md:flex space-x-6 text-white font-medium  text-[18px] relative top-20 right-45  w-full">
-      <a href="#" class="hover:underline">Study</a>
-      <a href="#" class="hover:underline">Student life</a>
-      <a href="#" class="hover:underline">Research and innovation</a>
-      <a href="#" class="hover:underline">Global</a>
-      <a href="#" class="hover:underline">About us</a>
-    </nav>
+<nav class="hidden md:flex space-x-4 text-white font-medium text-[18px] relative top-20 right-25  w-full">
+  <a href="#" class="hover:underline flex items-center space-x-1">
+    <span>Study</span>
+    <svg class="w-5 h-5 brightness-0 invert-100" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640">
+      <path d="M297.4 470.6C309.9 483.1 330.2 483.1 342.7 470.6L534.7 278.6C547.2 266.1 547.2 245.8 534.7 233.3C522.2 220.8 501.9 220.8 489.4 233.3L320 402.7L150.6 233.4C138.1 220.9 117.8 220.9 105.3 233.4C92.8 245.9 92.8 266.2 105.3 278.7L297.3 470.7z"/>
+    </svg>
+  </a>
+  <a href="#" class="hover:underline flex items-center space-x-1">
+    <span>Student life</span>
+    <svg class="w-5 h-5 brightness-0 invert-100" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640">
+      <path d="M297.4 470.6C309.9 483.1 330.2 483.1 342.7 470.6L534.7 278.6C547.2 266.1 547.2 245.8 534.7 233.3C522.2 220.8 501.9 220.8 489.4 233.3L320 402.7L150.6 233.4C138.1 220.9 117.8 220.9 105.3 233.4C92.8 245.9 92.8 266.2 105.3 278.7L297.3 470.7z"/>
+    </svg>
+  </a>
+  <a href="#" class="hover:underline flex items-center space-x-1">
+    <span>Research and innovation</span>
+    <svg class="w-5 h-5 brightness-0 invert-100" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640">
+      <path d="M297.4 470.6C309.9 483.1 330.2 483.1 342.7 470.6L534.7 278.6C547.2 266.1 547.2 245.8 534.7 233.3C522.2 220.8 501.9 220.8 489.4 233.3L320 402.7L150.6 233.4C138.1 220.9 117.8 220.9 105.3 233.4C92.8 245.9 92.8 266.2 105.3 278.7L297.3 470.7z"/>
+    </svg>
+  </a>
+  <a href="#" class="hover:underline flex items-center space-x-1">
+    <span>Global</span>
+    <svg class="w-5 h-5 brightness-0 invert-100" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640">
+      <path d="M297.4 470.6C309.9 483.1 330.2 483.1 342.7 470.6L534.7 278.6C547.2 266.1 547.2 245.8 534.7 233.3C522.2 220.8 501.9 220.8 489.4 233.3L320 402.7L150.6 233.4C138.1 220.9 117.8 220.9 105.3 233.4C92.8 245.9 92.8 266.2 105.3 278.7L297.3 470.7z"/>
+    </svg>
+  </a>
+  <a href="#" class="hover:underline flex items-center space-x-1">
+    <span>About us</span>
+    <svg class="w-5 h-5 brightness-0 invert-100" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640">
+      <path d="M297.4 470.6C309.9 483.1 330.2 483.1 342.7 470.6L534.7 278.6C547.2 266.1 547.2 245.8 534.7 233.3C522.2 220.8 501.9 220.8 489.4 233.3L320 402.7L150.6 233.4C138.1 220.9 117.8 220.9 105.3 233.4C92.8 245.9 92.8 266.2 105.3 278.7L297.3 470.7z"/>
+    </svg>
+  </a>
+</nav>
+
 
     <div class="hidden md:flex items-center space-x-6 text-white text-sm">
       <a href="#">News</a>
@@ -299,7 +325,9 @@ Explore our new Interdisciplinary Centre for Sustainability Research and find ou
        <div class=" border-t-1 w-70 mx-auto ">
         <div class=" flex items-center space-x-20 mt-15">
            <a class="underline  text-[18px] font-bold text-blue-950" href="">Our Impact</a>
-           <svg class=" w-5 h-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640"><path d="M98.9 114.6C91.5 130.6 98.5 149.7 114.5 157.1L467.6 320L114.6 483C98.6 490.4 91.5 509.4 99 525.5C106.5 541.6 125.4 548.5 141.5 541.1L557.5 349.1C568.8 343.9 576.1 332.5 576.1 320C576.1 307.5 568.8 296.2 557.5 290.9L141.4 99C125.4 91.6 106.3 98.6 98.9 114.6z"/></svg>
+           <span>
+             <svg class=" w-5 h-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640"><path d="M98.9 114.6C91.5 130.6 98.5 149.7 114.5 157.1L467.6 320L114.6 483C98.6 490.4 91.5 509.4 99 525.5C106.5 541.6 125.4 548.5 141.5 541.1L557.5 349.1C568.8 343.9 576.1 332.5 576.1 320C576.1 307.5 568.8 296.2 557.5 290.9L141.4 99C125.4 91.6 106.3 98.6 98.9 114.6z"/></svg>
+             </span>
         </div>  
     <div class=" w-70">     
      <p class=" opacity-90">
