fix: Unresponsive design

--- a/index.html
+++ b/index.html
@@ -192,29 +192,32 @@
 
 
 
-         
-     <div class="flex mx-auto  text-white bg-[#212b58] w-310  mt-30 ">
-  
-      <p class="absolute text-3xl font-bold ml-10 mt-3 ">Study with us</p>
-       
-      <div class=" mx-auto block justify-center items-center space-y-10 mt-5">  
-       <div class="w-190 mt-[50px]">
-        <p class=" text-[20px]">Discover endless possibilities. We offer a range of courses with support and expertise to help you succeed in your future career. Find your perfect course, explore our subject areas or discover everything you need to know about studying with us.</p>
-       </div>
-       <div>
-         <div class=" mx-auto flex space-x-5">
-          <p class=" text-[20px] border p-3"> Undergraduate</p>
-          <p class=" text-[20px] border p-3"> Master's</p>
-          <p class="text-[20px] border p-3"> Postgraduate research</p>
-         </div> 
-         <div class="flex  space-x-9 pt-5">
-          <p class=" text-[20px] border p-3"> Continuing Professional Development</p>
-          <p class=" text-[20px] border p-3"> International students</p>
-         </div> 
-       </div>
-     </div>  
-        <img class=" h-100 w-100  bg-cover" src="src/assets/Two,students,working,on,campus.jpg.jpeg" alt="">
-     </div>
+    <div class="flex flex-col md:flex-row mx-auto text-white bg-[#212b58] w-full md:w-310 mt-30 relative">
+
+  <p class="absolute text-3xl font-bold ml-10 mt-3 md:ml-10 md:mt-3">Study with us</p>
+
+  <div class="mx-auto block justify-center items-center space-y-10 mt-5 md:mt-5 md:ml-10 md:flex-1">
+    <div class="w-full md:w-190 mt-[50px]">
+      <p class="text-[20px]">
+        Discover endless possibilities. We offer a range of courses with support and expertise to help you succeed in your future career. Find your perfect course, explore our subject areas or discover everything you need to know about studying with us.
+      </p>
+    </div>
+    <div>
+      <div class="mx-auto flex flex-col md:flex-row md:space-x-5 space-y-3 md:space-y-0">
+        <p class="text-[20px] border p-3">Undergraduate</p>
+        <p class="text-[20px] border p-3">Master's</p>
+        <p class="text-[20px] border p-3">Postgraduate research</p>
+      </div>
+      <div class="flex flex-col md:flex-row md:space-x-9 space-y-3 md:space-y-0 pt-5">
+        <p class="text-[20px] border p-3">Continuing Professional Development</p>
+        <p class="text-[20px] border p-3">International students</p>
+      </div>
+    </div>
+  </div>
+
+  <img class="h-100 w-full md:w-100 object-cover mt-5 md:mt-0" src="src/assets/Two,students,working,on,campus.jpg.jpeg" alt="">
+
+</div>
 
 
      <div class="flex flex-col md:flex-row flex-wrap mx-auto text-white justify-center items-center bg-pink-600 p-6 md:p-10 space-y-6 md:space-y-0 md:space-x-10 mt-20 max-w-[1200.76px]">
