--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 
-<body class="mx-auto font-sans">
+<body class="mx-auto font-sans  overflow-x-hidden">
   <header class="absolute top-0 right-10 w-full z-20">
   <div class="flex items-center justify-between px-6 md:px-12 py-4">
     
@@ -509,7 +509,7 @@
   <div class="max-w-7xl mx-auto border-b border-white pb-10">
     <div class="flex flex-wrap justify-between gap-10">
    
-      <img class="brightness-0 invert w-40 h-40" src="src/assets/3086e686-fd75-4e3f-b52e-44b05c22a715.svg" alt="Logo">
+      <img class="brightness-0 invert w-40 h-40" src="src/assets/3086e686-fd75-4e3f-b52e-44b05c22a715.svg" alt="">
 
       <div>
         <h3 class="font-bold mb-4">Information for</h3>
@@ -566,7 +566,7 @@
   <div class="max-w-7xl mx-auto flex flex-wrap justify-between items-center border-b border-white py-6 gap-10">
     <div class="flex flex-col items-center">
       <p class=" relative top-10 opacity-60 ">Part of the</p>
-      <img class="w-30 h-30 brightness-0 invert-50 ml-10" src="src/assets/23b7247e-aa88-4f27-8e4a-a66ffdaa2f15.svg" alt="Partner">
+      <img class="w-30 h-30 brightness-0 invert-50 ml-10" src="src/assets/23b7247e-aa88-4f27-8e4a-a66ffdaa2f15.svg" alt="">
     </div>
     <div class="flex flex-wrap gap-5 justify-center">
       <img class="w-10 h-10 brightness-0 invert" src="src/assets/951ee5bb-cac3-4f65-a1e5-feaa1ce7f7b7.svg" alt="">
