fix: Unresponsive design

--- a/index.html
+++ b/index.html
@@ -592,4 +592,4 @@
 
   
 </body>
-</html>   I gave you 596 lines why are you giving me less than that while you have to increase them added responsiveness
+</html>
