fix: Unresponsive design

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 
-<body class="mx-auto font-sans  overflow-x-hidden">
+<body class="mx-auto font-sans  sm:overflow-x-hidden">
   <header class="absolute top-0 right-10 w-full z-20">
   <div class="flex items-center justify-between px-6 md:px-12 py-4">
     
