--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       <p class="hover:border-b-2 text-[20px]">Search</p>
     </button>
     <div>
-      <ul class="flex flex-col md:flex-row gap-2 md:gap-4">
+      <ul class="block md:flex-row gap-2 md:gap-4">
         <li><a class="hover:border-b-1 border-b-2 text-[20px]" href="#">Courses by A-Z</a></li>
         <li><a class="hover:border-b-1 border-b-2 text-[20px]" href="#">Courses by subject</a></li>
       </ul>
@@ -378,10 +378,10 @@
     </p>
 
     <div class="flex flex-col md:flex-row gap-5">
-      <button class="w-full md:w-50 h-15 border-1 text-[15px]"><p class="hover:border-b-2">Student life at Liverpool</p></button>
-      <button class="w-full md:w-60 h-15 border-1 text-[15px]"><p class="hover:border-b-2">Why choose Liverpool?</p></button>
+      <button class="w-full md:w-50 h-15 border-1 text-[15px]"><p class="hover:underline">Student life at Liverpool</p></button>
+      <button class="w-full md:w-60 h-15 border-1 text-[15px]"><p class="hover:underline">Why choose Liverpool?</p></button>
     </div>
-    <button class="w-full md:w-70 h-15 border-1 text-[15px]"><p class="hover:border-b-2">Find your accommodation</p></button>
+    <button class="w-full md:w-70 h-15 border-1 text-[15px]"><p class="hover:underline">Find your accommodation</p></button>
   </div>
 </div>
 
@@ -401,8 +401,8 @@
     </div>
     <div>
       <div class="flex flex-col md:flex-row md:space-x-5 space-y-3 md:space-y-0 mx-auto">
-        <p class="text-[20px] border p-3">Explore our global partnerships</p>
-        <p class="text-[20px] border p-3">Work with us</p>
+        <p class="text-[20px] border p-3 hover:underline">Explore our global partnerships</p>
+        <p class="text-[20px] border p-3 hover:underline">Work with us</p>
       </div>
     </div>
   </div>
@@ -447,7 +447,7 @@
 
 </div>
 
-<div class="w-40 ml-3 mt-20 mx-auto md:ml-3"><p class="text-[18px] border p-3">Read more news</p></div>
+<div class="w-40 ml-3 mt-20 mx-auto md:ml-3"><p class="text-[18px] border p-3  hover:underline">Read more news</p></div>
 
 <p class="font-bold text-4xl ml-3 mt-10 text-center md:text-left">Latest Events</p>
 
@@ -477,7 +477,7 @@
 
 </div>
 
-<div class="w-40 ml-3 mt-20 pb-15 mx-auto md:ml-3"><p class="text-[18px] border p-3 pb-5">See more Events</p></div>
+<div class="w-40 ml-3 mt-20 pb-15 mx-auto md:ml-3"><p class="text-[18px] border p-3 pb-5 hover:underline">See more Events</p></div>
 
 
      </section>
